refactor: user