@@ -12,48 +12,43 @@ import ru.yandex.practicum.model.User;
 import ru.yandex.practicum.repository.UserRepository;
 import ru.yandex.practicum.service.UserService;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
     private final UserRepository repository;
-    private final UserMapper mapper;
+    private final UserMapper userMapper;
 
     @Override
     @Transactional(readOnly = true)
     public List<UserDto> getUsers(List<Long> ids, Integer from, Integer size) {
-        List<User> users = new ArrayList<>();
-        List<UserDto> usersDto = new ArrayList<>();
+        List<User> users = (ids == null || ids.isEmpty()) ?
+                repository.findAll(PageRequest.of(from, size)).getContent() :
+                repository.findByIdIn(ids, PageRequest.of(from, size));
 
-        if (ids == null) {
-            users = repository.findAll(PageRequest.of(from / size, size)).toList();
-        } else {
-//            users = repository.findAllById(ids, PageRequest.of(from / size, size));
-        }
-
-        for (User user : users) {
-            usersDto.add(mapper.toUserDto(user));
-        }
-
-        return usersDto;
+        return users.stream()
+                .map(userMapper::toUserDto)
+                .collect(Collectors.toList());
     }
 
     @Override
     @Transactional
     public UserDto create(NewUserRequest newUser) {
-        User user = mapper.toUser(newUser);
-        return mapper.toUserDto(repository.save(user));
+        User user = userMapper.toUser(newUser);
+        return userMapper.toUserDto(repository.save(user));
     }
 
     @Override
     @Transactional
     public void delete(Long id) {
-        if (repository.findById(id).isEmpty()) {
-            throw new NotFoundException("Пользователь с id = " + id + " не найден");
-        }
-
+        User user = checkUserInDataBase(id);
         repository.deleteById(id);
+    }
+
+    private User checkUserInDataBase(Long id) {
+        return repository.findById(id)
+                .orElseThrow(() -> new NotFoundException("Значение в базе users не найдено: " + id));
     }
 }
